grammar/.antlr/ModelicaParser.java
// Generated from /home/jgoppert/git/gomoca/grammar/Modelica.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ModelicaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, UNSIGNED_NUMBER=27, ALGORITHM=28, AND=29, ANNOTATION=30, 
		BLOCK=31, BREAK=32, CLASS=33, CONNECT=34, CONNECTOR=35, CONSTANT=36, CONSTRAINEDBY=37, 
		DER=38, DISCRETE=39, EACH=40, ELSE=41, ELSEIF=42, ELSEWHEN=43, ENCAPSULATED=44, 
		END=45, ENUMERATION=46, EQUATION=47, EXPANDABLE=48, EXTENDS=49, EXTERNAL=50, 
		FALSE=51, FINAL=52, FLOW=53, FOR=54, FUNCTION=55, IF=56, IMPORT=57, IMPURE=58, 
		IN=59, INITIAL=60, INNER=61, INPUT=62, LOOP=63, MODEL=64, NOT=65, OPERATOR=66, 
		OR=67, OUTER=68, OUTPUT=69, PACKAGE=70, PARAMETER=71, PARTIAL=72, PROTECTED=73, 
		PUBLIC=74, PURE=75, RECORD=76, REDECLARE=77, REPLACEABLE=78, RETURN=79, 
		STREAM=80, THEN=81, TRUE=82, TYPE=83, WHEN=84, WHILE=85, WITHIN=86, IDENT=87, 
		STRING=88, UNSIGNED_INTEGER=89, UNSIGNED_REAL=90, COMMENT=91, WS=92;
	public static final int
		RULE_stored_definition = 0, RULE_class_definition = 1, RULE_class_prefixes = 2, 
		RULE_class_type = 3, RULE_class_specifier = 4, RULE_long_class_specifier = 5, 
		RULE_composition = 6, RULE_composition_non_first = 7, RULE_external_function_call = 8, 
		RULE_element_list = 9, RULE_element = 10, RULE_element_options = 11, RULE_import_clause = 12, 
		RULE_import_clause_types = 13, RULE_import_list = 14, RULE_component_clause = 15, 
		RULE_type_prefix = 16, RULE_component_list = 17, RULE_component_declaration = 18, 
		RULE_declaration = 19, RULE_equation = 20, RULE_statement = 21, RULE_for_indices = 22, 
		RULE_for_index = 23, RULE_expression = 24, RULE_simple_expression = 25, 
		RULE_logical_expression = 26, RULE_logical_term = 27, RULE_relation = 28, 
		RULE_arithmetic_expression = 29, RULE_term = 30, RULE_factor = 31, RULE_primary = 32, 
		RULE_type_specifier = 33, RULE_name = 34, RULE_component_reference = 35, 
		RULE_component_scope = 36, RULE_function_call_args = 37, RULE_function_arguments = 38, 
		RULE_function_arguments_non_first = 39, RULE_array_arguments = 40, RULE_array_arguments_non_first = 41, 
		RULE_named_arguments = 42, RULE_named_argument = 43, RULE_function_argument = 44, 
		RULE_function_partial_application = 45, RULE_expression_list = 46, RULE_array_subscripts = 47, 
		RULE_subscript = 48, RULE_description = 49, RULE_description_string = 50;
	private static String[] makeRuleNames() {
		return new String[] {
			"stored_definition", "class_definition", "class_prefixes", "class_type", 
			"class_specifier", "long_class_specifier", "composition", "composition_non_first", 
			"external_function_call", "element_list", "element", "element_options", 
			"import_clause", "import_clause_types", "import_list", "component_clause", 
			"type_prefix", "component_list", "component_declaration", "declaration", 
			"equation", "statement", "for_indices", "for_index", "expression", "simple_expression", 
			"logical_expression", "logical_term", "relation", "arithmetic_expression", 
			"term", "factor", "primary", "type_specifier", "name", "component_reference", 
			"component_scope", "function_call_args", "function_arguments", "function_arguments_non_first", 
			"array_arguments", "array_arguments_non_first", "named_arguments", "named_argument", 
			"function_argument", "function_partial_application", "expression_list", 
			"array_subscripts", "subscript", "description", "description_string"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'='", "'('", "')'", "','", "':='", "':'", "'<'", "'<='", 
			"'>'", "'>='", "'=='", "'<>'", "'+'", "'-'", "'.+'", "'.-'", "'*'", "'/'", 
			"'.*'", "'./'", "'^'", "'.^'", "'.'", "'['", "']'", null, "'algorithm'", 
			"'and'", "'annotation'", "'block'", "'break'", "'class'", "'connect'", 
			"'connector'", "'constant'", "'constrainedby'", "'der'", "'discrete'", 
			"'each'", "'else'", "'elseif'", "'elsewhen'", "'encapsulated'", "'end'", 
			"'enumeration'", "'equation'", "'expandable'", "'extends'", "'external'", 
			"'false'", "'final'", "'flow'", "'for'", "'function'", "'if'", "'import'", 
			"'impure'", "'in'", "'initial'", "'inner'", "'input'", "'loop'", "'model'", 
			"'not'", "'operator'", "'or'", "'outer'", "'output'", "'package'", "'parameter'", 
			"'partial'", "'protected'", "'public'", "'pure'", "'record'", "'redeclare'", 
			"'replaceable'", "'return'", "'stream'", "'then'", "'true'", "'type'", 
			"'when'", "'while'", "'within'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "UNSIGNED_NUMBER", "ALGORITHM", "AND", "ANNOTATION", 
			"BLOCK", "BREAK", "CLASS", "CONNECT", "CONNECTOR", "CONSTANT", "CONSTRAINEDBY", 
			"DER", "DISCRETE", "EACH", "ELSE", "ELSEIF", "ELSEWHEN", "ENCAPSULATED", 
			"END", "ENUMERATION", "EQUATION", "EXPANDABLE", "EXTENDS", "EXTERNAL", 
			"FALSE", "FINAL", "FLOW", "FOR", "FUNCTION", "IF", "IMPORT", "IMPURE", 
			"IN", "INITIAL", "INNER", "INPUT", "LOOP", "MODEL", "NOT", "OPERATOR", 
			"OR", "OUTER", "OUTPUT", "PACKAGE", "PARAMETER", "PARTIAL", "PROTECTED", 
			"PUBLIC", "PURE", "RECORD", "REDECLARE", "REPLACEABLE", "RETURN", "STREAM", 
			"THEN", "TRUE", "TYPE", "WHEN", "WHILE", "WITHIN", "IDENT", "STRING", 
			"UNSIGNED_INTEGER", "UNSIGNED_REAL", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Modelica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ModelicaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Stored_definitionContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ModelicaParser.EOF, 0); }
		public TerminalNode WITHIN() { return getToken(ModelicaParser.WITHIN, 0); }
		public List<Class_definitionContext> class_definition() {
			return getRuleContexts(Class_definitionContext.class);
		}
		public Class_definitionContext class_definition(int i) {
			return getRuleContext(Class_definitionContext.class,i);
		}
		public Component_referenceContext component_reference() {
			return getRuleContext(Component_referenceContext.class,0);
		}
		public List<TerminalNode> FINAL() { return getTokens(ModelicaParser.FINAL); }
		public TerminalNode FINAL(int i) {
			return getToken(ModelicaParser.FINAL, i);
		}
		public Stored_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stored_definition; }
	}

	public final Stored_definitionContext stored_definition() throws RecognitionException {
		Stored_definitionContext _localctx = new Stored_definitionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stored_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WITHIN) {
				{
				setState(102);
				match(WITHIN);
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__23 || _la==IDENT) {
					{
					setState(103);
					component_reference();
					}
				}

				setState(106);
				match(T__0);
				}
			}

			setState(115); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==FINAL) {
					{
					setState(109);
					match(FINAL);
					}
				}

				setState(112);
				class_definition();
				setState(113);
				match(T__0);
				}
				}
				setState(117); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 31)) & ~0x3f) == 0 && ((1L << (_la - 31)) & 2199025360897L) != 0) );
			setState(119);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Class_definitionContext extends ParserRuleContext {
		public Class_prefixesContext class_prefixes() {
			return getRuleContext(Class_prefixesContext.class,0);
		}
		public Class_specifierContext class_specifier() {
			return getRuleContext(Class_specifierContext.class,0);
		}
		public TerminalNode ENCAPSULATED() { return getToken(ModelicaParser.ENCAPSULATED, 0); }
		public Class_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_definition; }
	}

	public final Class_definitionContext class_definition() throws RecognitionException {
		Class_definitionContext _localctx = new Class_definitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_class_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ENCAPSULATED) {
				{
				setState(121);
				match(ENCAPSULATED);
				}
			}

			setState(124);
			class_prefixes();
			setState(125);
			class_specifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Class_prefixesContext extends ParserRuleContext {
		public Class_typeContext class_type() {
			return getRuleContext(Class_typeContext.class,0);
		}
		public TerminalNode PARTIAL() { return getToken(ModelicaParser.PARTIAL, 0); }
		public Class_prefixesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_prefixes; }
	}

	public final Class_prefixesContext class_prefixes() throws RecognitionException {
		Class_prefixesContext _localctx = new Class_prefixesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class_prefixes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PARTIAL) {
				{
				setState(127);
				match(PARTIAL);
				}
			}

			setState(130);
			class_type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Class_typeContext extends ParserRuleContext {
		public Class_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_type; }
	 
		public Class_typeContext() { }
		public void copyFrom(Class_typeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Class_type_blockContext extends Class_typeContext {
		public TerminalNode BLOCK() { return getToken(ModelicaParser.BLOCK, 0); }
		public Class_type_blockContext(Class_typeContext ctx) { copyFrom(ctx); }
	}

	public final Class_typeContext class_type() throws RecognitionException {
		Class_typeContext _localctx = new Class_typeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_class_type);
		try {
			_localctx = new Class_type_blockContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(BLOCK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Class_specifierContext extends ParserRuleContext {
		public Long_class_specifierContext long_class_specifier() {
			return getRuleContext(Long_class_specifierContext.class,0);
		}
		public Class_specifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_specifier; }
	}

	public final Class_specifierContext class_specifier() throws RecognitionException {
		Class_specifierContext _localctx = new Class_specifierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_class_specifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			long_class_specifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Long_class_specifierContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(ModelicaParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(ModelicaParser.IDENT, i);
		}
		public Description_stringContext description_string() {
			return getRuleContext(Description_stringContext.class,0);
		}
		public CompositionContext composition() {
			return getRuleContext(CompositionContext.class,0);
		}
		public TerminalNode END() { return getToken(ModelicaParser.END, 0); }
		public Long_class_specifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_long_class_specifier; }
	}

	public final Long_class_specifierContext long_class_specifier() throws RecognitionException {
		Long_class_specifierContext _localctx = new Long_class_specifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_long_class_specifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(IDENT);
			setState(137);
			description_string();
			setState(138);
			composition();
			setState(139);
			match(END);
			setState(140);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompositionContext extends ParserRuleContext {
		public Element_listContext element_list() {
			return getRuleContext(Element_listContext.class,0);
		}
		public List<Composition_non_firstContext> composition_non_first() {
			return getRuleContexts(Composition_non_firstContext.class);
		}
		public Composition_non_firstContext composition_non_first(int i) {
			return getRuleContext(Composition_non_firstContext.class,i);
		}
		public CompositionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_composition; }
	}

	public final CompositionContext composition() throws RecognitionException {
		CompositionContext _localctx = new CompositionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_composition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			element_list();
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 28)) & ~0x3f) == 0 && ((1L << (_la - 28)) & 105557411758081L) != 0)) {
				{
				{
				setState(143);
				composition_non_first();
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Composition_non_firstContext extends ParserRuleContext {
		public Composition_non_firstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_composition_non_first; }
	 
		public Composition_non_firstContext() { }
		public void copyFrom(Composition_non_firstContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Composition_equation_sectionContext extends Composition_non_firstContext {
		public TerminalNode EQUATION() { return getToken(ModelicaParser.EQUATION, 0); }
		public TerminalNode INITIAL() { return getToken(ModelicaParser.INITIAL, 0); }
		public List<EquationContext> equation() {
			return getRuleContexts(EquationContext.class);
		}
		public EquationContext equation(int i) {
			return getRuleContext(EquationContext.class,i);
		}
		public Composition_equation_sectionContext(Composition_non_firstContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Composition_visiblity_element_listContext extends Composition_non_firstContext {
		public Token visibility;
		public Element_listContext element_list() {
			return getRuleContext(Element_listContext.class,0);
		}
		public TerminalNode PUBLIC() { return getToken(ModelicaParser.PUBLIC, 0); }
		public TerminalNode PROTECTED() { return getToken(ModelicaParser.PROTECTED, 0); }
		public Composition_visiblity_element_listContext(Composition_non_firstContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Composition_algorithm_sectionContext extends Composition_non_firstContext {
		public TerminalNode ALGORITHM() { return getToken(ModelicaParser.ALGORITHM, 0); }
		public TerminalNode INITIAL() { return getToken(ModelicaParser.INITIAL, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Composition_algorithm_sectionContext(Composition_non_firstContext ctx) { copyFrom(ctx); }
	}
